# llm_backend

./: .env.example  .gitignore  README.md  SUPABASE_SETUP.md  TEST_UI_README.md  main.py  pyproject.toml  run_test_ui.py  supabase_schema.sql  supabase_schema_dev.sql  test_ui.py
app/: __init__.py
app/api/: __init__.py
app/api/dependencies/: __init__.py  chat.py
app/api/endpoints/: __init__.py  chat.py  profile.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  chat.py  profile.py
app/services/: __init__.py  chat_service.py  chat_tool_service.py  profile_service.py  tools.py
app/utils/: logging.py
streamlit_pages/: __init__.py  career_manager.py  profile_manager.py  project_manager.py  test_ui.py
tests/: test_real_profile_tools.py
