[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = "AI Assistant Chat System with FastAPI and LangGraph"
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
langchain = ">=0.1.0"
langgraph = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-anthropic = ">=0.1.0"
python-multipart = ">=0.0.6"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.25.0"
aiofiles = ">=23.2.0"
supabase = ">=2.0.0"
email-validator = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
httpx = ">=0.25.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.7.0"
streamlit = ">=1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
